<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/consLayoutRegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Регистрация"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        style="@style/MyEditTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/name_edit"
        android:inputType="textPersonName|textCapWords"
        android:textAppearance="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/editTextSecondName"
        style="@style/MyEditTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/second_name_edit"
        android:inputType="textPersonName|textCapWords"
        android:textAppearance="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        style="@style/MyEditTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/phone_number_edit"
        android:inputType="phone"
        android:textAppearance="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/MyEditTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/email_edit"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/MyEditTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pas_edit"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textAppearance="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <EditText
        android:id="@+id/editTextPasswordAgain"
        style="@style/MyEditTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/pass_again_edit"
        android:inputType="textPassword"
        android:textAppearance="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:onClick="RegisterClick"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordAgain" />

    <TextView
        android:id="@+id/textView14"
        style="@style/TextAddHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        style="@style/TextAddHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_second_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textView16"
        style="@style/TextAddHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSecondName" />

    <TextView
        android:id="@+id/textView17"
        style="@style/TextAddHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />

    <TextView
        android:id="@+id/textView18"
        style="@style/TextAddHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textView19"
        style="@style/TextAddHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_pass_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>